// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Trace Config component renders empty trace config 1`] = `
<body>
  <div>
    <div>
      <div
        class="euiAccordion"
        data-test-subj="traceGroupsAccordion"
      >
        <div
          class="euiAccordion__triggerWrapper"
        >
          <button
            aria-controls="traceGroups"
            aria-expanded="false"
            class="euiAccordion__button"
            id="random_html_id"
            type="button"
          >
            <span
              class="euiAccordion__iconWrapper"
            >
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiIcon-isLoading euiAccordion__icon"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                />
              </svg>
            </span>
            <span
              class="euiIEFlexWrapFix"
            >
              <div
                class="euiText euiText--small"
              >
                <h3>
                  Trace groups
                   
                  <span
                    class="euiBadge euiBadge--iconLeft"
                    data-test-subj="traceGroupsCountBadge"
                    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
                    title="0"
                  >
                    <span
                      class="euiBadge__content"
                    >
                      0
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="euiSpacer euiSpacer--s"
              />
              <div
                class="euiText euiText--small"
              >
                <div
                  class="euiTextColor euiTextColor--subdued"
                >
                  Constrain your application to specific trace groups
                </div>
              </div>
            </span>
          </button>
          <div
            class="euiAccordion__optionalAction"
          >
            <button
              class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
              data-test-subj="clearTraceGroupsButton"
              disabled=""
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Clear all
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          aria-labelledby="random_html_id"
          class="euiAccordion__childWrapper"
          id="traceGroups"
          role="region"
          tabindex="-1"
        >
          <div>
            <div
              class="euiAccordion__padding--l"
            >
              <div
                class="euiFormRow euiFormRow--compressed"
                id="random_html_id-row"
              >
                <div
                  class="euiFormRow__labelWrapper"
                >
                  <label
                    class="euiFormLabel euiFormRow__label"
                    for="random_html_id"
                  >
                    Trace Groups
                  </label>
                </div>
                <div
                  class="euiFormRow__fieldWrapper"
                >
                  <div
                    aria-describedby="random_html_id-help-0"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="Select trace groups"
                    class="euiComboBox euiComboBox--compressed"
                    data-test-subj="traceGroupsComboBox"
                    role="combobox"
                  >
                    <div
                      class="euiFormControlLayout euiFormControlLayout--compressed"
                    >
                      <div
                        class="euiFormControlLayout__childrenWrapper"
                      >
                        <div
                          class="euiComboBox__inputWrap euiComboBox__inputWrap--compressed"
                          data-test-subj="comboBoxInput"
                          tabindex="-1"
                        >
                          <p
                            class="euiComboBoxPlaceholder"
                          >
                            Select or add trace groups
                          </p>
                          <div
                            class="euiComboBox__input"
                            style="font-size: 14px; display: inline-block;"
                          >
                            <input
                              aria-controls=""
                              data-test-subj="comboBoxSearchInput"
                              id="random_html_id"
                              role="textbox"
                              style="box-sizing: content-box; width: 2px;"
                              value=""
                            />
                            <div
                              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                            />
                          </div>
                        </div>
                        <div
                          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                        >
                          <button
                            aria-label="Open list of options"
                            class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                            data-test-subj="comboBoxToggleListButton"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFormHelpText euiFormRow__text"
                    id="random_html_id-help-0"
                  >
                    Select one or multiple trace groups, or type a custom one
                  </div>
                </div>
              </div>
              <div
                class="euiSpacer euiSpacer--l"
              />
              <div
                class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
              >
                <div
                  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrow10"
                  >
                    <div
                      class="euiText euiText--medium"
                    >
                      <span
                        class="panel-title"
                      >
                        Latency by trace group
                      </span>
                      <span
                        class="panel-title-count"
                      >
                         (0)
                      </span>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      class="euiLink euiLink--primary"
                      data-test-subj="dashboard-table-percentile-button-1"
                      type="button"
                    >
                      <div
                        class="euiText euiText--extraSmall"
                      >
                        <span
                          style="color: rgb(149, 122, 201);"
                        >
                          □
                        </span>
                         &lt; 95 percentile
                      </div>
                    </button>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrow1"
                  />
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      class="euiLink euiLink--primary"
                      data-test-subj="dashboard-table-percentile-button-2"
                      type="button"
                    >
                      <div
                        class="euiText euiText--extraSmall"
                      >
                        <span
                          style="color: rgb(149, 122, 201);"
                        >
                          ■
                        </span>
                         &gt;= 95 percentile
                      </div>
                    </button>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrow1"
                  />
                </div>
                <div
                  class="euiSpacer euiSpacer--m"
                />
                <hr
                  class="euiHorizontalRule euiHorizontalRule--full"
                />
                <div
                  class="euiBasicTable euiBasicTable-loading"
                  data-test-subj="dashboardTable"
                >
                  <div>
                    <div
                      class="euiTableHeaderMobile"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
                      >
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        />
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <div
                            class="euiTableSortMobile"
                          >
                            <div
                              class="euiPopover euiPopover--anchorDownRight"
                            >
                              <div
                                class="euiPopover__anchor"
                              >
                                <button
                                  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                                  type="button"
                                >
                                  <span
                                    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                      focusable="false"
                                      height="16"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                      />
                                    </svg>
                                    <span
                                      class="euiButtonEmpty__text"
                                    >
                                      Sorting
                                    </span>
                                  </span>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <table
                      class="euiTable euiTable--responsive euiTable--auto"
                      id="random_html_id"
                      tabindex="-1"
                    >
                      <caption
                        class="euiScreenReaderOnly euiTableCaption"
                      />
                      <thead>
                        <tr>
                          <th
                            aria-live="polite"
                            aria-sort="none"
                            class="euiTableHeaderCell"
                            data-test-subj="tableHeaderCell_dashboard_trace_group_name_0"
                            role="columnheader"
                            scope="col"
                          >
                            <button
                              class="euiTableHeaderButton"
                              data-test-subj="tableHeaderSortButton"
                              type="button"
                            >
                              <span
                                class="euiTableCellContent"
                              >
                                <span
                                  class="euiTableCellContent__text"
                                  title="Trace group name  "
                                >
                                  <span
                                    class="euiToolTipAnchor"
                                  >
                                    <div>
                                      Trace group name
                                       
                                      <svg
                                        aria-hidden="true"
                                        class="euiIcon euiIcon--small euiIcon--subdued euiIcon-isLoading eui-alignTop"
                                        focusable="false"
                                        height="16"
                                        role="img"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                        />
                                      </svg>
                                    </div>
                                    <div>
                                       
                                    </div>
                                  </span>
                                </span>
                              </span>
                            </button>
                          </th>
                          <th
                            aria-live="polite"
                            aria-sort="descending"
                            class="euiTableHeaderCell"
                            data-test-subj="tableHeaderCell_dashboard_latency_variance_1"
                            role="columnheader"
                            scope="col"
                            style="width: 300px;"
                          >
                            <button
                              class="euiTableHeaderButton euiTableHeaderButton-isSorted"
                              data-test-subj="tableHeaderSortButton"
                              type="button"
                            >
                              <span
                                class="euiTableCellContent euiTableCellContent--alignCenter"
                              >
                                <span
                                  class="euiTableCellContent__text"
                                  title="Duration variance (ms) "
                                >
                                  <span
                                    class="euiToolTipAnchor"
                                  >
                                    <span>
                                      Duration variance (ms)
                                       
                                      <svg
                                        aria-hidden="true"
                                        class="euiIcon euiIcon--small euiIcon--subdued euiIcon-isLoading eui-alignTop"
                                        focusable="false"
                                        height="16"
                                        role="img"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                  <div
                                    class="euiText euiText--extraSmall"
                                  >
                                    <div
                                      class="euiTextColor euiTextColor--subdued"
                                    />
                                  </div>
                                </span>
                                <svg
                                  aria-hidden="true"
                                  class="euiIcon euiIcon--medium euiIcon-isLoading euiTableSortIcon"
                                  focusable="false"
                                  height="16"
                                  role="img"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                  />
                                </svg>
                              </span>
                            </button>
                          </th>
                          <th
                            aria-live="polite"
                            aria-sort="none"
                            class="euiTableHeaderCell"
                            data-test-subj="tableHeaderCell_dashboard_average_latency_2"
                            role="columnheader"
                            scope="col"
                          >
                            <button
                              class="euiTableHeaderButton"
                              data-test-subj="tableHeaderSortButton"
                              type="button"
                            >
                              <span
                                class="euiTableCellContent euiTableCellContent--alignRight"
                              >
                                <span
                                  class="euiTableCellContent__text"
                                  title="Average duration (ms)  "
                                >
                                  <span
                                    class="euiToolTipAnchor"
                                  >
                                    <div>
                                      Average duration (ms)
                                       
                                      <svg
                                        aria-hidden="true"
                                        class="euiIcon euiIcon--small euiIcon--subdued euiIcon-isLoading eui-alignTop"
                                        focusable="false"
                                        height="16"
                                        role="img"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                        />
                                      </svg>
                                    </div>
                                    <div>
                                       
                                    </div>
                                  </span>
                                </span>
                              </span>
                            </button>
                          </th>
                          <th
                            class="euiTableHeaderCell"
                            data-test-subj="tableHeaderCell_24_hour_latency_trend_3"
                            role="columnheader"
                            scope="col"
                          >
                            <span
                              class="euiTableCellContent euiTableCellContent--alignRight"
                            >
                              <span
                                class="euiTableCellContent__text"
                                title="24-hour duration trend  "
                              >
                                <span
                                  class="euiToolTipAnchor"
                                >
                                  <div>
                                    24-hour duration trend
                                     
                                    <svg
                                      aria-hidden="true"
                                      class="euiIcon euiIcon--small euiIcon--subdued euiIcon-isLoading eui-alignTop"
                                      focusable="false"
                                      height="16"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                      />
                                    </svg>
                                  </div>
                                  <div>
                                     
                                  </div>
                                </span>
                              </span>
                            </span>
                          </th>
                          <th
                            aria-live="polite"
                            aria-sort="none"
                            class="euiTableHeaderCell"
                            data-test-subj="tableHeaderCell_dashboard_error_rate_4"
                            role="columnheader"
                            scope="col"
                          >
                            <button
                              class="euiTableHeaderButton"
                              data-test-subj="tableHeaderSortButton"
                              type="button"
                            >
                              <span
                                class="euiTableCellContent euiTableCellContent--alignRight"
                              >
                                <span
                                  class="euiTableCellContent__text"
                                  title="Error rate  "
                                >
                                  <span
                                    class="euiToolTipAnchor"
                                  >
                                    <div>
                                      Error rate
                                       
                                      <svg
                                        aria-hidden="true"
                                        class="euiIcon euiIcon--small euiIcon--subdued euiIcon-isLoading eui-alignTop"
                                        focusable="false"
                                        height="16"
                                        role="img"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                        />
                                      </svg>
                                    </div>
                                    <div>
                                       
                                    </div>
                                  </span>
                                </span>
                              </span>
                            </button>
                          </th>
                          <th
                            aria-live="polite"
                            aria-sort="none"
                            class="euiTableHeaderCell"
                            data-test-subj="tableHeaderCell_dashboard_traces_5"
                            role="columnheader"
                            scope="col"
                          >
                            <button
                              class="euiTableHeaderButton"
                              data-test-subj="tableHeaderSortButton"
                              type="button"
                            >
                              <span
                                class="euiTableCellContent euiTableCellContent--alignRight"
                              >
                                <span
                                  class="euiTableCellContent__text"
                                  title="Traces  "
                                >
                                  <span
                                    class="euiToolTipAnchor"
                                  >
                                    <div>
                                      Traces
                                       
                                      <svg
                                        aria-hidden="true"
                                        class="euiIcon euiIcon--small euiIcon--subdued euiIcon-isLoading eui-alignTop"
                                        focusable="false"
                                        height="16"
                                        role="img"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                        />
                                      </svg>
                                    </div>
                                    <div>
                                       
                                    </div>
                                  </span>
                                </span>
                              </span>
                            </button>
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr
                          class="euiTableRow"
                        >
                          <td
                            class="euiTableRowCell euiTableRowCell--isMobileFullWidth"
                            colspan="6"
                          >
                            <div
                              class="euiTableCellContent euiTableCellContent--alignCenter"
                            >
                              <span
                                class="euiTableCellContent__text"
                              >
                                No items found
                              </span>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Trace Config component renders with one trace selected 1`] = `
<body>
  <div>
    <div>
      <div
        class="euiAccordion"
        data-test-subj="traceGroupsAccordion"
      >
        <div
          class="euiAccordion__triggerWrapper"
        >
          <button
            aria-controls="traceGroups"
            aria-expanded="false"
            class="euiAccordion__button"
            id="random_html_id"
            type="button"
          >
            <span
              class="euiAccordion__iconWrapper"
            >
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiAccordion__icon"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m5.157 13.069 4.611-4.685a.546.546 0 0 0 0-.768L5.158 2.93a.552.552 0 0 1 0-.771.53.53 0 0 1 .759 0l4.61 4.684c.631.641.63 1.672 0 2.312l-4.61 4.684a.53.53 0 0 1-.76 0 .552.552 0 0 1 0-.771Z"
                  fill-rule="nonzero"
                />
              </svg>
            </span>
            <span
              class="euiIEFlexWrapFix"
            >
              <div
                class="euiText euiText--small"
              >
                <h3>
                  Trace groups
                   
                  <span
                    class="euiBadge euiBadge--iconLeft"
                    data-test-subj="traceGroupsCountBadge"
                    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
                    title="0"
                  >
                    <span
                      class="euiBadge__content"
                    >
                      0
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="euiSpacer euiSpacer--s"
              />
              <div
                class="euiText euiText--small"
              >
                <div
                  class="euiTextColor euiTextColor--subdued"
                >
                  Constrain your application to specific trace groups
                </div>
              </div>
            </span>
          </button>
          <div
            class="euiAccordion__optionalAction"
          >
            <button
              class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
              data-test-subj="clearTraceGroupsButton"
              disabled=""
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Clear all
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          aria-labelledby="random_html_id"
          class="euiAccordion__childWrapper"
          id="traceGroups"
          role="region"
          tabindex="-1"
        >
          <div>
            <div
              class="euiAccordion__padding--l"
            >
              <div
                class="euiFormRow euiFormRow--compressed"
                id="random_html_id-row"
              >
                <div
                  class="euiFormRow__labelWrapper"
                >
                  <label
                    class="euiFormLabel euiFormRow__label"
                    for="random_html_id"
                  >
                    Trace Groups
                  </label>
                </div>
                <div
                  class="euiFormRow__fieldWrapper"
                >
                  <div
                    aria-describedby="random_html_id-help-0"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="Select trace groups"
                    class="euiComboBox euiComboBox--compressed"
                    data-test-subj="traceGroupsComboBox"
                    role="combobox"
                  >
                    <div
                      class="euiFormControlLayout euiFormControlLayout--compressed"
                    >
                      <div
                        class="euiFormControlLayout__childrenWrapper"
                      >
                        <div
                          class="euiComboBox__inputWrap euiComboBox__inputWrap--compressed"
                          data-test-subj="comboBoxInput"
                          tabindex="-1"
                        >
                          <p
                            class="euiComboBoxPlaceholder"
                          >
                            Select or add trace groups
                          </p>
                          <div
                            class="euiComboBox__input"
                            style="font-size: 14px; display: inline-block;"
                          >
                            <input
                              aria-controls=""
                              data-test-subj="comboBoxSearchInput"
                              id="random_html_id"
                              role="textbox"
                              style="box-sizing: content-box; width: 2px;"
                              value=""
                            />
                            <div
                              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                            />
                          </div>
                        </div>
                        <div
                          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                        >
                          <button
                            aria-label="Open list of options"
                            class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                            data-test-subj="comboBoxToggleListButton"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                fill-rule="non-zero"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFormHelpText euiFormRow__text"
                    id="random_html_id-help-0"
                  >
                    Select one or multiple trace groups, or type a custom one
                  </div>
                </div>
              </div>
              <div
                class="euiSpacer euiSpacer--l"
              />
              <div
                class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
              >
                <div
                  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrow10"
                  >
                    <div
                      class="euiText euiText--medium"
                    >
                      <span
                        class="panel-title"
                      >
                        Latency by trace group
                      </span>
                      <span
                        class="panel-title-count"
                      >
                         (0)
                      </span>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      class="euiLink euiLink--primary"
                      data-test-subj="dashboard-table-percentile-button-1"
                      type="button"
                    >
                      <div
                        class="euiText euiText--extraSmall"
                      >
                        <span
                          style="color: rgb(149, 122, 201);"
                        >
                          □
                        </span>
                         &lt; 95 percentile
                      </div>
                    </button>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrow1"
                  />
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      class="euiLink euiLink--primary"
                      data-test-subj="dashboard-table-percentile-button-2"
                      type="button"
                    >
                      <div
                        class="euiText euiText--extraSmall"
                      >
                        <span
                          style="color: rgb(149, 122, 201);"
                        >
                          ■
                        </span>
                         &gt;= 95 percentile
                      </div>
                    </button>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrow1"
                  />
                </div>
                <div
                  class="euiSpacer euiSpacer--m"
                />
                <hr
                  class="euiHorizontalRule euiHorizontalRule--full"
                />
                <div
                  class="euiBasicTable euiBasicTable-loading"
                  data-test-subj="dashboardTable"
                >
                  <div>
                    <div
                      class="euiTableHeaderMobile"
                    >
                      <div
                        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
                      >
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        />
                        <div
                          class="euiFlexItem euiFlexItem--flexGrowZero"
                        >
                          <div
                            class="euiTableSortMobile"
                          >
                            <div
                              class="euiPopover euiPopover--anchorDownRight"
                            >
                              <div
                                class="euiPopover__anchor"
                              >
                                <button
                                  class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--flushRight"
                                  type="button"
                                >
                                  <span
                                    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                                      focusable="false"
                                      height="16"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                        fill-rule="non-zero"
                                      />
                                    </svg>
                                    <span
                                      class="euiButtonEmpty__text"
                                    >
                                      Sorting
                                    </span>
                                  </span>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <table
                      class="euiTable euiTable--responsive euiTable--auto"
                      id="random_html_id"
                      tabindex="-1"
                    >
                      <caption
                        class="euiScreenReaderOnly euiTableCaption"
                      />
                      <thead>
                        <tr>
                          <th
                            aria-live="polite"
                            aria-sort="none"
                            class="euiTableHeaderCell"
                            data-test-subj="tableHeaderCell_dashboard_trace_group_name_0"
                            role="columnheader"
                            scope="col"
                          >
                            <button
                              class="euiTableHeaderButton"
                              data-test-subj="tableHeaderSortButton"
                              type="button"
                            >
                              <span
                                class="euiTableCellContent"
                              >
                                <span
                                  class="euiTableCellContent__text"
                                  title="Trace group name  "
                                >
                                  <span
                                    class="euiToolTipAnchor"
                                  >
                                    <div>
                                      Trace group name
                                       
                                      <svg
                                        aria-hidden="true"
                                        class="euiIcon euiIcon--small euiIcon--subdued eui-alignTop"
                                        focusable="false"
                                        height="16"
                                        role="img"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12Zm0-1A5 5 0 1 0 8 3a5 5 0 0 0 0 10Zm-.186-1.065A.785.785 0 0 1 7 11.12c0-.48.34-.82.814-.82.475 0 .809.34.809.82 0 .475-.334.815-.809.815ZM5.9 6.317C5.96 5.168 6.755 4.4 8.048 4.4c1.218 0 2.091.759 2.091 1.8 0 .736-.36 1.304-1.03 1.707-.56.33-.717.56-.717 1.022v.305l-.1.1H7.47l-.1-.1v-.431c-.005-.646.302-1.104.987-1.514.527-.322.708-.59.708-1.047 0-.536-.416-.91-1.05-.91-.652 0-1.064.374-1.112.998l-.1.092H6l-.1-.105Z"
                                        />
                                      </svg>
                                    </div>
                                    <div>
                                       
                                    </div>
                                  </span>
                                </span>
                              </span>
                            </button>
                          </th>
                          <th
                            aria-live="polite"
                            aria-sort="descending"
                            class="euiTableHeaderCell"
                            data-test-subj="tableHeaderCell_dashboard_latency_variance_1"
                            role="columnheader"
                            scope="col"
                            style="width: 300px;"
                          >
                            <button
                              class="euiTableHeaderButton euiTableHeaderButton-isSorted"
                              data-test-subj="tableHeaderSortButton"
                              type="button"
                            >
                              <span
                                class="euiTableCellContent euiTableCellContent--alignCenter"
                              >
                                <span
                                  class="euiTableCellContent__text"
                                  title="Duration variance (ms) "
                                >
                                  <span
                                    class="euiToolTipAnchor"
                                  >
                                    <span>
                                      Duration variance (ms)
                                       
                                      <svg
                                        aria-hidden="true"
                                        class="euiIcon euiIcon--small euiIcon--subdued eui-alignTop"
                                        focusable="false"
                                        height="16"
                                        role="img"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12Zm0-1A5 5 0 1 0 8 3a5 5 0 0 0 0 10Zm-.186-1.065A.785.785 0 0 1 7 11.12c0-.48.34-.82.814-.82.475 0 .809.34.809.82 0 .475-.334.815-.809.815ZM5.9 6.317C5.96 5.168 6.755 4.4 8.048 4.4c1.218 0 2.091.759 2.091 1.8 0 .736-.36 1.304-1.03 1.707-.56.33-.717.56-.717 1.022v.305l-.1.1H7.47l-.1-.1v-.431c-.005-.646.302-1.104.987-1.514.527-.322.708-.59.708-1.047 0-.536-.416-.91-1.05-.91-.652 0-1.064.374-1.112.998l-.1.092H6l-.1-.105Z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                  <div
                                    class="euiText euiText--extraSmall"
                                  >
                                    <div
                                      class="euiTextColor euiTextColor--subdued"
                                    />
                                  </div>
                                </span>
                                <svg
                                  aria-hidden="true"
                                  class="euiIcon euiIcon--medium euiTableSortIcon"
                                  focusable="false"
                                  height="16"
                                  role="img"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M7 11.692V3.556C7 3.249 7.224 3 7.5 3s.5.249.5.556v8.136l4.096-4.096a.5.5 0 0 1 .707.707l-4.242 4.243a1.494 1.494 0 0 1-.925.433.454.454 0 0 1-.272 0 1.494 1.494 0 0 1-.925-.433L2.197 8.303a.5.5 0 1 1 .707-.707L7 11.692Z"
                                  />
                                </svg>
                              </span>
                            </button>
                          </th>
                          <th
                            aria-live="polite"
                            aria-sort="none"
                            class="euiTableHeaderCell"
                            data-test-subj="tableHeaderCell_dashboard_average_latency_2"
                            role="columnheader"
                            scope="col"
                          >
                            <button
                              class="euiTableHeaderButton"
                              data-test-subj="tableHeaderSortButton"
                              type="button"
                            >
                              <span
                                class="euiTableCellContent euiTableCellContent--alignRight"
                              >
                                <span
                                  class="euiTableCellContent__text"
                                  title="Average duration (ms)  "
                                >
                                  <span
                                    class="euiToolTipAnchor"
                                  >
                                    <div>
                                      Average duration (ms)
                                       
                                      <svg
                                        aria-hidden="true"
                                        class="euiIcon euiIcon--small euiIcon--subdued eui-alignTop"
                                        focusable="false"
                                        height="16"
                                        role="img"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12Zm0-1A5 5 0 1 0 8 3a5 5 0 0 0 0 10Zm-.186-1.065A.785.785 0 0 1 7 11.12c0-.48.34-.82.814-.82.475 0 .809.34.809.82 0 .475-.334.815-.809.815ZM5.9 6.317C5.96 5.168 6.755 4.4 8.048 4.4c1.218 0 2.091.759 2.091 1.8 0 .736-.36 1.304-1.03 1.707-.56.33-.717.56-.717 1.022v.305l-.1.1H7.47l-.1-.1v-.431c-.005-.646.302-1.104.987-1.514.527-.322.708-.59.708-1.047 0-.536-.416-.91-1.05-.91-.652 0-1.064.374-1.112.998l-.1.092H6l-.1-.105Z"
                                        />
                                      </svg>
                                    </div>
                                    <div>
                                       
                                    </div>
                                  </span>
                                </span>
                              </span>
                            </button>
                          </th>
                          <th
                            class="euiTableHeaderCell"
                            data-test-subj="tableHeaderCell_24_hour_latency_trend_3"
                            role="columnheader"
                            scope="col"
                          >
                            <span
                              class="euiTableCellContent euiTableCellContent--alignRight"
                            >
                              <span
                                class="euiTableCellContent__text"
                                title="24-hour duration trend  "
                              >
                                <span
                                  class="euiToolTipAnchor"
                                >
                                  <div>
                                    24-hour duration trend
                                     
                                    <svg
                                      aria-hidden="true"
                                      class="euiIcon euiIcon--small euiIcon--subdued eui-alignTop"
                                      focusable="false"
                                      height="16"
                                      role="img"
                                      viewBox="0 0 16 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12Zm0-1A5 5 0 1 0 8 3a5 5 0 0 0 0 10Zm-.186-1.065A.785.785 0 0 1 7 11.12c0-.48.34-.82.814-.82.475 0 .809.34.809.82 0 .475-.334.815-.809.815ZM5.9 6.317C5.96 5.168 6.755 4.4 8.048 4.4c1.218 0 2.091.759 2.091 1.8 0 .736-.36 1.304-1.03 1.707-.56.33-.717.56-.717 1.022v.305l-.1.1H7.47l-.1-.1v-.431c-.005-.646.302-1.104.987-1.514.527-.322.708-.59.708-1.047 0-.536-.416-.91-1.05-.91-.652 0-1.064.374-1.112.998l-.1.092H6l-.1-.105Z"
                                      />
                                    </svg>
                                  </div>
                                  <div>
                                     
                                  </div>
                                </span>
                              </span>
                            </span>
                          </th>
                          <th
                            aria-live="polite"
                            aria-sort="none"
                            class="euiTableHeaderCell"
                            data-test-subj="tableHeaderCell_dashboard_error_rate_4"
                            role="columnheader"
                            scope="col"
                          >
                            <button
                              class="euiTableHeaderButton"
                              data-test-subj="tableHeaderSortButton"
                              type="button"
                            >
                              <span
                                class="euiTableCellContent euiTableCellContent--alignRight"
                              >
                                <span
                                  class="euiTableCellContent__text"
                                  title="Error rate  "
                                >
                                  <span
                                    class="euiToolTipAnchor"
                                  >
                                    <div>
                                      Error rate
                                       
                                      <svg
                                        aria-hidden="true"
                                        class="euiIcon euiIcon--small euiIcon--subdued eui-alignTop"
                                        focusable="false"
                                        height="16"
                                        role="img"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12Zm0-1A5 5 0 1 0 8 3a5 5 0 0 0 0 10Zm-.186-1.065A.785.785 0 0 1 7 11.12c0-.48.34-.82.814-.82.475 0 .809.34.809.82 0 .475-.334.815-.809.815ZM5.9 6.317C5.96 5.168 6.755 4.4 8.048 4.4c1.218 0 2.091.759 2.091 1.8 0 .736-.36 1.304-1.03 1.707-.56.33-.717.56-.717 1.022v.305l-.1.1H7.47l-.1-.1v-.431c-.005-.646.302-1.104.987-1.514.527-.322.708-.59.708-1.047 0-.536-.416-.91-1.05-.91-.652 0-1.064.374-1.112.998l-.1.092H6l-.1-.105Z"
                                        />
                                      </svg>
                                    </div>
                                    <div>
                                       
                                    </div>
                                  </span>
                                </span>
                              </span>
                            </button>
                          </th>
                          <th
                            aria-live="polite"
                            aria-sort="none"
                            class="euiTableHeaderCell"
                            data-test-subj="tableHeaderCell_dashboard_traces_5"
                            role="columnheader"
                            scope="col"
                          >
                            <button
                              class="euiTableHeaderButton"
                              data-test-subj="tableHeaderSortButton"
                              type="button"
                            >
                              <span
                                class="euiTableCellContent euiTableCellContent--alignRight"
                              >
                                <span
                                  class="euiTableCellContent__text"
                                  title="Traces  "
                                >
                                  <span
                                    class="euiToolTipAnchor"
                                  >
                                    <div>
                                      Traces
                                       
                                      <svg
                                        aria-hidden="true"
                                        class="euiIcon euiIcon--small euiIcon--subdued eui-alignTop"
                                        focusable="false"
                                        height="16"
                                        role="img"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12Zm0-1A5 5 0 1 0 8 3a5 5 0 0 0 0 10Zm-.186-1.065A.785.785 0 0 1 7 11.12c0-.48.34-.82.814-.82.475 0 .809.34.809.82 0 .475-.334.815-.809.815ZM5.9 6.317C5.96 5.168 6.755 4.4 8.048 4.4c1.218 0 2.091.759 2.091 1.8 0 .736-.36 1.304-1.03 1.707-.56.33-.717.56-.717 1.022v.305l-.1.1H7.47l-.1-.1v-.431c-.005-.646.302-1.104.987-1.514.527-.322.708-.59.708-1.047 0-.536-.416-.91-1.05-.91-.652 0-1.064.374-1.112.998l-.1.092H6l-.1-.105Z"
                                        />
                                      </svg>
                                    </div>
                                    <div>
                                       
                                    </div>
                                  </span>
                                </span>
                              </span>
                            </button>
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr
                          class="euiTableRow"
                        >
                          <td
                            class="euiTableRowCell euiTableRowCell--isMobileFullWidth"
                            colspan="6"
                          >
                            <div
                              class="euiTableCellContent euiTableCellContent--alignCenter"
                            >
                              <span
                                class="euiTableCellContent__text"
                              >
                                No items found
                              </span>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
